# NEREA

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pytest_and_PyPI.yml  pytest_and_TestPyPi.yml  scheduled_CI.yaml  test_version_branches.yml  unit_test.yml
PSICHE/: CoverE.py  EffectiveMass.py  FissionFragmentSpectrum.py  PowerMonitor.py  ReactionRate.py  SpectralIndex.py  __init__.py  utils.py
REPTILE/: Calculated.py  Comparisons.py  Computables.py  CoverE.py  EffectiveMass.py  Experimental.py  FissionFragmentSpectrum.py  PowerMonitor.py  ReactionRate.py  SpectralIndex.py  __init__.py  utils.py
docs/: conf.py  requirements.txt
docs/source/: conf.py  index.rst  nerea.rst
nerea/: Calculated.py  Comparisons.py  Experimental.py  FissionFragmentSpectrum.py  ReactionRate.py  __init__.py  calculated.py  classes.py  comparisons.py  constants.py  control_rod.py  count_rate.py  defaults.py  effective_mass.py  experimental.py  fission_fragment_spectrum.py  functions.py  logging_config.py  pulse_height_spectrum.py  reaction_rate.py  utils.py
tests/: test_AverageCountRate.py  test_AverageReactionRate.py  test_C.py  test_CalculatedSpectralIndex.py  test_CalculatedTraverse.py  test_Comparison.py  test_ControlRodCalibration.py  test_CountRate.py  test_CoverC.py  test_CoverE.py  test_EffectiveMass.py  test_FissionFragmentSpectra.py  test_FissionFragmentSpectrum.py  test_FrameCompare.py  test_NormalizedFissionFragmentSpectrum.py  test_NormalizedPulseHeightSpectrum.py  test_PowerMonitor.py  test_PowerMonitors.py  test_PulseHeightSpectra.py  test_PulseHeightSpectrum.py  test_ReactionRate.py  test_ReactionRates.py  test_SpectralIndex.py  test_Traverse.py  test_classes.py  test_functions.py  test_utils.py
