[project]
name = "nerea"
dynamic = ['version']
description = "NEREA (Neutron Energy-integrated Reactor Experiment Analysis) is a Python package designed for the analysis and evaluation of spectral indices and reaction rates from fission fragment spectra. The package provides a comprehensive set of tools for handling, processing, and analyzing nuclear data, specifically focusing on fission fragment spectra, effective mass, and reaction rates."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["neutron experiment", "nuclear engineering", "experiment data processing", "energy-integrated experiments", "nuclear reactor"]
authors = [
  {email = "federico.grimaldi98@gmail.com"},
  {name = "Federico Grimaldi"}
]
maintainers = [
  {name = "Federico Grimaldi", email = "federico.grimaldi98@gmail.com"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent"
]

dependencies = [
  "numpy==1.26.4",
  "pandas==1.5.1",
  "scipy==1.14.1",
  "serpentTools==0.10.1",
  "xlwt==1.3.0",
  "matplotlib==3.9.3"
  ]

[tool.setuptools.dynamic]
version = {attr = "nerea.__version__"}

[project.optional-dependencies]
test = [
  "flake8",
  "pytest >= 8.2.0",
  "pytest-cov >= 4.0.0"
]

[project.urls]
repository = "https://github.com/GrimFe/NEREA.git"

[tool.setuptools.packages.find]
include = ["nerea"]

[build-system]
requires = ["setuptools>=42", "wheel",]
build-backend = "setuptools.build_meta"
